[package]
name = "hello_world_rust"
version = "0.1.0"
authors = ["Joao Andrade <jjadonotenter@gmail.com>"]
description = "Playing around with Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/joaosa/hello-rust"
repository = "https://github.com/joaosa/hello-rust"
documentation = "https://github.com/joaosa/hello-rust"

[dependencies]
